# app/Models/SubCategory.php
@@ -5,6 +5,16 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
+/**
+ * @OA\Schema(
+ *     title="SubCategory",
+ *     description="SubCategory model",
+ *     @OA\Xml(
+ *         name="SubCategory",
+ *        namespace="App\Models",
+ *    ),
+ * )
+ */
 class SubCategory extends Model
 {
     use HasFactory;
